--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
     - name: Login to Docker image registry
       uses: docker/login-action@v2
       with:
@@ -23,6 +26,7 @@ jobs:
       uses: docker/build-push-action@v4.1.1
       with:
         no-cache: true
-        # Do not cache specified stages
         tags: ${{ github.repository }}:$(date +%s)
-    
+        push: true
+        # Do not cache specified stages
+
