--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,16 +19,21 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-    
+
+    - name: Docker metadata release
+      id: metadata
+      uses: docker/metadata-action@v4
+      with:
+        images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=raw, $(date +'%Y%m%d-%H%M%S')
+          type=edge
+
     - name: Build and push Docker images
-      # You may pin to the exact commit or the version.
-      # uses: docker/build-push-action@2eb1c1961a95fc15694676618e422e8ba1d63825
       uses: docker/build-push-action@v4.1.1
       with:
         no-cache: true
-        tags: |
-          ${{ github.repository }}:$(date +'%Y%m%d-%H%M%S')
-          ${{ github.repository }}:latest
+        tags: ${{ steps.metadata.outputs.tags }}
+        labels: ${{ steps.metadata.outputs.labels }}
         push: true
-        # Do not cache specified stages
 
