--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         images: ghcr.io/${{ github.repository }}
         tags: |
-          type=raw, $(date +'%Y%m%d-%H%M%S')
+          type=raw,$(date +'%Y%m%d-%H%M%SZ')
           type=edge
 
     - name: Build and push Docker images
