--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,8 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+
+
     - name: Login to Docker image registry
       uses: docker/login-action@v2
       with:
@@ -26,7 +28,7 @@ jobs:
       with:
         images: ghcr.io/${{ github.repository }}
         tags: |
-          type=raw,$(date +'%Y%m%d-%H%M%SZ')
+          type=raw,{{date 'YYYYMMDD-HHmmss' tz='UTC'}}
           type=edge
 
     - name: Build and push Docker images
