--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,6 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-
-
     - name: Login to Docker image registry
       uses: docker/login-action@v2
       with:
@@ -22,20 +20,27 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Docker metadata release
-      id: metadata
-      uses: docker/metadata-action@v4
-      with:
-        images: ghcr.io/${{ github.repository }}
-        tags: |
-          type=edge
-          type=schedule,{{date 'YYYYMMDD-HHmmss'}}
+    - name: Save tag in environment variable
+      id: tag
+      run: echo "docker_tag=$(date -u +"%Y%m%dT%H%M%SZ")" >> $GITHUB_ENV
+
+    - name: Image tag
+      run: echo ${{ env.docker_tag }}
+
+#    - name: Docker metadata release
+#      id: metadata
+#      uses: docker/metadata-action@v4
+#      with:
+#        images: ghcr.io/${{ github.repository }}
+#        tags: |
+#          type=edge
+#          type=schedule,{{date 'YYYYMMDD-HHmmss'}}
 
     - name: Build and push Docker images
       uses: docker/build-push-action@v4.1.1
       with:
         no-cache: true
-        tags: ${{ steps.metadata.outputs.tags }}
-        labels: ${{ steps.metadata.outputs.labels }}
+#        tags: ${{ steps.metadata.outputs.tags }}
+        tags: ghcr.io/${{ github.repository }}:${{ env.docker_tag }}
         push: true
 
