--- a/app.conf.template
+++ b/app.conf.template
@@ -1,7 +1,7 @@
 server {
     listen       8080;
     server_name  localhost;
-
+    server_tokens off;
     location ~${HTTP_BASE_PATH}(?<path>.*) {
         root   /usr/share/nginx;
         # kill cache
