--- a/app.conf.template
+++ b/app.conf.template
@@ -13,7 +13,11 @@ server {
         etag off;
         try_files  $path $uri $uri/ =404;
     }
-
+  # Health Endpoint
+    location /health {
+        access_log off;
+        return 200;
+    }
     # redirect server error pages to the static page /50x.html
     #
     error_page   500 502 503 504  /50x.html;
